samples/_failures_safe/1761325830_f0958f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a998cf74.c: In function ‘main’:
./samples/SAFE/__tmp_a998cf74.c:190:9: error: expected expression at end of input
  190 |         if (choice == 1 && current_state ==
      |         ^~
./samples/SAFE/__tmp_a998cf74.c:190:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a998cf74.c:190:9: error: expected declaration or statement at end of input
